# valipal

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  plan.md  pyproject.toml
ArcExpect/: ARCValidationPackage.fs  ArcExpect.fsproj  BadgeCreation.fs  Helpers.fs  PyxpectoExtensions.fs  PyxpectoRunner.fs  Serialization.fs  SimpleJson.fs  SimpleXml.fs  TopLevelAPI.fs  ValidationSummary.fs  __init__.py
ArcExpect.Tests/: ArcExpect.Tests.fsproj  ArcExpect.Tests.fsproj.Backup.tmp  Execution.fs  Frontmatter.fs  Main.fs  Serialization.fs  TestRunner.fs
ArcExpect/AVPRIndex/: Domain.fs  Frontmatter.fs  Globals.fs
references/: Fable.Pyxpecto.md  validation-specs.md
references/.arc-validate-results/ceplas-experimental@1.0.0/: validation_report.xml  validation_summary.json
references/.arc-validate-results/ceplas-experimental@1.0.1/: validation_report.xml  validation_summary.json
references/.arc-validate-results/edal@0.0.4/: validation_summary.json
references/.arc-validate-results/treem-sequencing@0.0.1/: validation_report.xml
