name = "arcexpect"
version = "0.0.1"
description = "Helper for ARC validation scripts"
authors = [
    { name = "Heinrich Lukas Weil", email = "weil@rptu.de" },
]
requires-python = ">=3.11"
readme = "README.md"
keywords = [
    "ro-crate",
    "profile crate"
]
dependencies = [
    "anybadge"
]



[dependency-groups]
dev = [
    "pytest>=8.1.1,<9",
    "twine>=4.0.2",
    "fable_library>=5.3.0"
]

[tool.poetry]
include = [
    "src/ROCratePCC/py/**/*.py"
]
packages = [
    { include = "**/*.py", from = "src/ROCratePCC/", to = "rocratepcc" }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"